# template-python

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  coverage.lcov  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  label.yml
my_cli/: __init__.py  cli.py  config.py
my_cli/static/: my_quotes.txt  my_static_file.txt
my_package/: __init__.py  cli.py
my_package/static/: my_quotes.txt
tests/: __init__.py  test_cli.py
