[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_package"
version = "0.0.1"
description = 'My package description'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["mykeywords"]
authors = [{ name = "My Name", email = "my.email@test.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "typer[all]==0.16.0",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]==1.8.3",
  "black==25.1.0",
  "flake8-bugbear==24.12.12",
  "flake8-comprehensions==3.16.0",
  "flake8-docstrings==1.7.0",
  "flake8-encodings[classes]==0.5.1",
  "flake8-return==1.2.0",
  "flake8-simplify==0.22.0",
  "flake8==7.2.0",
  "isort==6.0.1",
  "mypy==1.16.0",
  "pep8-naming==0.15.1",
  "pytest==8.3.5",
]
test = [
  "pytest-cov==6.1.1",
  "pytest==8.3.5",
]

[project.scripts]
my-cli = "my_package.cli:app"

[project.urls]
Documentation = "https://github.com/my_github_user/my_package#readme"
Issues = "https://github.com/my_github_user/my_package/issues"
Source = "https://github.com/my_github_user/my_package"

[tool.hatch.build]
artifacts = [
  "my_package/static/**",
]

[tool.hatch.envs.dev]
features = ["dev"]

[tool.hatch.envs.test]
features = ["test"]

[tool.hatch.envs.default.scripts]
lint = [
  "flake8 .",
  "mypy . --check-untyped-defs",
  "bandit -qr -c pyproject.toml .",
  "black . --check --diff",
  "isort . --check-only --diff",
]
fmt = [
  "isort .",
  "black .",
]
test = [
  "pytest -v",
]
cov = [
  "pytest -v --cov my_package --cov-report xml --cov-fail-under=80",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
